<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="28sp"
        android:autoSizeTextType="uniform"
        android:padding="15dp"
        android:background="@color/dark_green"
        android:text="@string/welcome"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv">

        <Button
            style="@style/home_buttons"
            android:text="@string/play"
            android:onClick="play"/>

        <Button
            style="@style/home_buttons"
            android:text="@string/game_modes"
            android:onClick="openGameModeSelector"/>
        <Button
            style="@style/home_buttons"
            android:text="@string/statistics"/>
        <Button
            style="@style/home_buttons"
            android:text="@string/settings"
            android:onClick="settings"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>